z-index fix for parent elements that is suppressing the element to be shown

--- a/chardinjs.scss
+++ b/chardinjs.scss
@@ -65,8 +65,12 @@
 .chardinjs-show-element {
   z-index: 9999999;
   opacity: 0.8;
-}
 
+}
 .chardinjs-relative-position {
   position: relative;
+}
+
+.chardinjs-parent-toggle-fix {
+  z-index: inherit !important;
 }
